--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -41,8 +41,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: var(--font-weight-bold);
 }
 
-a[href] {
-    color: var(--text-color);
+a[href]:not(:visited) {
     text-decoration: none;
 }
 
