--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -47,7 +47,8 @@ a[href]:not(:visited) {
 }
 
 a:visited {
-    font-style: italic;
+    color: var(--text-color);
+    text-decoration: none;
 }
 
 a:hover {
