--- a/CSS_advanced/styles/16-style.css
+++ b/CSS_advanced/styles/16-style.css
@@ -451,6 +451,8 @@ a:active {
     text-transform: var(--section-tagline-transform);
     font-weight: var(--font-weight-bold);
 }
+
 .container {
-  width: 960px;
+    width: 960px;
+    margin: 0 auto;
 }
