--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -1,4 +1,14 @@
+
 @import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
+
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+    font-size: 62.5%;
+}
 
 :root {
     --color-primary: #d73953;
@@ -19,7 +29,6 @@
     --line-height-small: 1.2;
     --line-height-base: 1.5;
     --line-height-big: 1.8;
-    --section-header-align: center;
     --section-tagline-transform: uppercase;
     --section-title-margin: 0;
     --section-title-color: var(--color-black);
@@ -32,30 +41,57 @@
     --nav-item-font-family: var(--font-family-title);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
-    --nav-item-letter-spacing: calc(0.04 * 1rem);
+    --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
-    --nav-item-margin: 0 0 calc(3 * 1rem) 0;
+    --nav-item-margin: 0 0 3rem 0;
     --nav-item-link-hover: var(--color-primary);
 }
 
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-html {
-    scroll-behavior: smooth;
-    font-size: 62.5%;
-    box-sizing: border-box;
-}
-
 body {
-    color: var(--text-color);
     font-family: var(--font-family-base);
+    color: var(--text-color);
     font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
     line-height: var(--line-height-base);
+}
+
+a {
+    color: var(--text-color);
+    text-decoration: none;
+}
+
+a:link {
+    color: var(--text-color);
+    text-decoration: none;
+}
+
+a:visited {
+    font-style: italic;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    background-color: var(--color-light-grey);
+}
+
+.section-tagline {
+    color: var(--color-primary);
+    font-family: var(--font-family-title);
+    text-transform: var(--section-tagline-transform);
+    font-weight: var(--font-weight-bold)
+}
+
+.container {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.card-category {
+    color: var(--color-primary);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -63,36 +99,8 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: var(--font-weight-bold);
 }
 
-a[href]:not(:visited) {
-    color: var(--text-color);
-    text-decoration: none;
-}
-
-a:visited {
-    color: var(--text-color);
-    text-decoration: none;
-    font-style: italic;
-}
-
-a:hover {
-    color: var(--text-color);
-    text-decoration: underline;
-    font-style: italic;
-}
-
-a:active {
-    color: var(--text-color);
-    text-decoration: underline;
-    font-style: italic;
-    background-color: var(--color-light-grey);
-}
-
 .visually-hidden {
     display: none;
-}
-
-.card-category {
-    color: var(--color-primary);
 }
 
 .section {
@@ -100,8 +108,8 @@ a:active {
 }
 
 .section-header {
-    text-align: var(--section-header-align);
     padding: var(--section-header-padding);
+    text-align: var(--section-header-align);
 }
 
 .section-body {
@@ -121,19 +129,6 @@ a:active {
     color: var(--section-title-color);
 }
 
-.section-tagline {
-    color: var(--color-primary);
-    font-family: var(--font-family-title);
-    text-transform: var(--section-tagline-transform);
-    font-weight: var(--font-weight-bold);
-}
-
-.container {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .footer {
     padding: var(--footer-padding);
 }
@@ -148,7 +143,6 @@ a:active {
     list-style-type: none;
     text-align: center;
 }
-
 .nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
@@ -157,12 +151,10 @@ a:active {
     display: var(--nav-item-display);
     margin: var(--nav-item-margin);
 }
-
 .nav .nav-link {
     display: block;
-    padding: calc(0.5 * 1rem) calc(1 * 1rem);
+    padding: 0.5rem 1rem;
 }
-
 .nav .nav-link:hover {
     color: var(--nav-item-link-hover);
 }
