--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -280,7 +280,7 @@ ul.row {
     text-decoration: var(--button-hover-text-decoration);
     background: var(--button-hover-background);
     transition: var(--transition-duration);
-    transition: color var(--transition-duration), background-color var(--transition-duration);
+    transition-property: color, background-color;
 }
 
 .card-testimonial {
