--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -279,7 +279,7 @@ ul.row {
     color: var(--button-hover-color);
     text-decoration: var(--button-hover-text-decoration);
     background: var(--button-hover-background);
-    transition: var(--transition-duration);
+    transition-duration: var(--transition-duration);
     transition-property: color, background-color;
 }
 
@@ -336,7 +336,6 @@ ul.row {
     width: 100%;
     object-fit: cover;
     vertical-align: bottom;
-    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .card-work .card-inner {
